0.2.14:
 * changed the version numbering system.
 * fixed Authentication and MD5 with non-ASCII characters (issue #7)
 * Created UserPlaylist class.
 * User.getPlaylistIDs is now deprecated.
 * track.addToPlaylist is now deprecated.
 * User.fetchPlaylist is now deprecated.

0.2b13:
 * fixed: User.get_friends limit parameter (issue #5)
 * changed: using hashlib module instead of deprecated md5 module.

0.2b12
 * fixed: some unicode problems.
 * fix: a typo in the function name Exceptionable.clear_errors()
 * fixed: User.fetchPlaylist (#3)
 * api change: User.getPlaylistsIDs is now User.getPlaylistsData, and User.getPlaylistsIDs returns a list of IDs now.

0.2b10
 * fixed: getURL now returns the link with it's parameters double quoted as it should.
 * Artist.getTopTags, Track.getTopTags, Album.getTopTags all now have a limit argument.
 * added: ServiceException.getID.
 * changed: Taggable.addTags posts each tag separately.
 
0.2b9
 * fixed: crashes when adding a job to Asynchronizer and starting it when it had already started.
 
0.2b8
 * Asynchronizer.async_call now accepts None as callback.
 * moved all the tag related functions to a separate Taggable class.
 * added Taggable.setTags
 
0.2b7
 * Added Track.getWikiPublishedDate, Track.getSummary, Track.getContent.
 * fixes

0.2b6
 * fixes
 
0.2b5
 * Moved changes to an external file "changes.txt".
 * Added new webservices as: Track.getId, Track.getDuration, Track.getListenerCount, Track.getPlayCount, 
   Track.getAlbumName, Track.getAlbum, Track.getImage, Event.share.
 * Reverted where all objects retrieve all available metadata on the server from the server, now optional.
 

0.2b4
 * Added Track.getArtistName.
 * Added numerous functions to User, Making use of the new User.getInfo webservice.
 * Every object now retrieves all the metadata from the webservices even the trivial ones
  like the album name or artist for proper casing. Use the object's attributes (like Album.artist_name and